saome bugs fixed05